--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -20,3 +20,9 @@
     font-weight: 700;
     cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+    .product{
+        flex-direction: column;
+    }
+}
