--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,4 +1,4 @@
-.shopContainer{
+.twinContainer{
     display: flex;
     margin: 30px 0;
 }
@@ -6,22 +6,26 @@
     width: 70%;
     float: left;
     margin: 10px 10px 10px 20px;
-    border-right: 1px solid gray;
+    border-right: 1px solid lightgray;
+    border-left: 1px solid lightgray;
 }
 .cartContainer{
-    padding: 30px;
+    padding: 40px;
     float: left;
+    margin: 10px 20px;
     border-radius: 10px;
-    border: 3px solid orange;
+
 }
  
 @media screen and (max-width: 900px){
-    .shopContainer{
+    .twinContainer{
         display: flex;
         flex-direction: column;
     }
     .productContainer{
-        width:100%;
+        width:90%;
+        margin: 10px auto;
+
     }
     
 }
